--- a/app/.env
+++ b/app/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=ed659878f9d675164b24a33f58f4cc1e
 ###< symfony/framework-bundle ###
 
