--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,7 @@
     "license": "UNLICENSED",
     "private": true,
     "scripts": {
-        "dev-server": "encore dev-server --host 0.0.0.0",
+        "dev-server": "encore dev-server --host 0.0.0.0 --public http://localhost:8080 --port 8080",
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
