--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.2.0",
+        "sass": "^1.55.0",
+        "sass-loader": "^13.1.0",
         "vue": "^3.2.40",
         "vue-loader": "^17.0.0",
         "vue-router": "^4.1.5",
