--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.0",
+        "@glidejs/glide": "^3.6.0",
         "sass": "^1.55.0",
         "sass-loader": "^13.1.0",
         "vue": "^3.2.40",
